syntax = "proto2";

package track_response;

message ApiTrackResponse {
  required int32 athlete_id = 1;
  repeated ApiTrackPoint track_points = 2;
}

message ApiTrackPoint {
  required double timestamp = 1;
  required float lat = 2;
  required float lng = 3;
  required float altitude = 4;
  required float altitude_agl = 5;
  optional string status = 6;
  required float speed = 7;
  required float vertical_speed = 8;
}
